# spaghetteye-fe

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .env.example  .gitignore  README.md  log_iotc.txt  pyproject.toml  requirements.txt
backend/app/: __main__.py  api.py  camera_stream.py  config.py  events.py  failure_detector.py  mqtt_client.py  printer_control.py  spaghetti_monitor.py  state.py  telegram.py
backend/src/spaghettimonster/: api.py  main.py  spaghetti_monitor.py
backend/src/spaghettimonster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: CameraTile.vue
frontend/src/router/: index.ts
frontend/src/views/: CameraFrame.vue  Dashboard.vue  DetectorPanel.vue  EventLog.vue  PrinterStatus.vue
src/: App.vue  style.css
src/spaghettimonster/: get_chatid.py
