[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spaghettimonster"
version = "0.1.0"
description = "Self-hosted Bambu A1 print monitor"
requires-python = ">=3.10"
dependencies = [
  "paho-mqtt>=2.0,<3",
  "python-dotenv>=1.0",
  "requests>=2.32",
  "numpy>=1.26",
  "onnxruntime>=1.18",
  "Pillow>=10.0",
  "fastapi>=0.110",
  "uvicorn>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
